test/src/e2e_vm_tests/test_programs/should_pass/language/where_clause_impls/src/main.sw
script;

dep my_add;
dep my_mul;
dep my_math;
dep my_point;

use std::{
    assert::assert,
    logging::log,
};

use my_add::*;
use my_mul::*;
use my_math::*;
use my_point::*;

fn main() -> u64 {

    42
}
