test/src/e2e_vm_tests/test_programs/should_fail/configurables_are_not_const/src/main.sw
script;

configurable {
    VALUE: u64 = 42,
}

fn main() {
    const CONSTANT: u64 = VALUE;
}
